inheritance/output.txt
nheritance$ g++ polymorphism2.5.cpp 
polymorphism2.5.cpp: In function ‘int main()’:
polymorphism2.5.cpp:49:10: error: cannot convert ‘Student (*)[10]’ to ‘Student (*)[20]’ in assignment
   49 |     p2 = &p4;
      |          ^~~
      |          |
      |          Student (*)[10]
inheritance$ 
